# roverforge-arena-reuploaded-

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
cpp/: CMakeLists.txt  README.md  path_score.cpp
docs/: ARCHITECTURE.md  CAPABILITIES.md  GITHUB_WORKFLOW.md  REVIEW_NOTES.md  ROADMAP.md  RUNBOOK.md
game/: __init__.py  agent.py  arena_app.py  geometry.py  main.py  native.py  simulation.py
game/agents/: __init__.py  factory.py  grid_planner.py  random_agent.py  rule_based.py
game/core/: __init__.py  actions.py  config.py  constants.py  environment.py  evaluation.py  math_utils.py  models.py  types.py
game/rendering/: __init__.py  arena_app.py  debug_draw.py  geometry.py  hud.py  settings.py  theme.py
tests/: __init__.py  test_cli.py  test_hud.py  test_simulation.py
